# UrlShorter

./: .gitignore  pyproject.toml
src/: app.py
src/config/: settings.py
src/controller/: url_controller.py
src/database/: connection.py
src/models/: url.py
src/schemas/: url_schema.py
src/service/: url_service.py
urlshorter/: app.py
urlshorter/config/: settings.py
urlshorter/controller/: url_controller.py
